// Vitest Snapshot v1

exports[`transform > fixtures > test/fixtures/basic.vue > isProduction is false 1`] = `
"import { openBlock, createElementBlock, createElementVNode } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

console.log('Hello world');

const _sfc_main = {};

const _hoisted_1 = /*#__PURE__*/createElementVNode(\\"h1\\", null, \\"Hello World\\", -1 /* HOISTED */);
const _hoisted_2 = [
  _hoisted_1
];

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock(\\"div\\", null, _hoisted_2))
}
var basic = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render]]);

export { basic as default };
"
`;

exports[`transform > fixtures > test/fixtures/basic.vue > isProduction is true 1`] = `
"import { openBlock, createElementBlock, createElementVNode } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

console.log('Hello world');

const _sfc_main = {};

const _hoisted_1 = /*#__PURE__*/createElementVNode(\\"h1\\", null, \\"Hello World\\", -1 /* HOISTED */);
const _hoisted_2 = [
  _hoisted_1
];

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock(\\"div\\", null, _hoisted_2))
}
var basic = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render]]);

export { basic as default };
"
`;

exports[`transform > fixtures > test/fixtures/reactivity-transform.ts > isProduction is false 1`] = `
"import { ref } from 'vue';

const ref1 = ref('hello');
const ref2 = (ref('hello'));

console.log(ref1.value);
console.log(ref2.value);
console.log((ref1));
console.log((ref2));
"
`;

exports[`transform > fixtures > test/fixtures/reactivity-transform.ts > isProduction is true 1`] = `
"import { ref } from 'vue';

const ref1 = ref('hello');
const ref2 = (ref('hello'));

console.log(ref1.value);
console.log(ref2.value);
console.log((ref1));
console.log((ref2));
"
`;

exports[`transform > fixtures > test/fixtures/reactivity-transform.vue > isProduction is false 1`] = `
"import { ref } from 'vue';

const _sfc_main = {
  setup(__props) {

const ref1 = ref('hello');
const ref2 = (ref('hello'));

console.log(ref1.value);
console.log(ref2.value);
console.log((ref1));
console.log((ref2));

return () => {}
}

};

export { _sfc_main as default };
"
`;

exports[`transform > fixtures > test/fixtures/reactivity-transform.vue > isProduction is true 1`] = `
"import { ref } from 'vue';

const _sfc_main = {
  setup(__props) {

const ref1 = ref('hello');
const ref2 = (ref('hello'));

console.log(ref1.value);
console.log(ref2.value);
console.log((ref1));
console.log((ref2));

return () => {}
}

};

export { _sfc_main as default };
"
`;

exports[`transform > fixtures > test/fixtures/script-setup.vue > isProduction is false 1`] = `
"import { openBlock, createElementBlock, createElementVNode } from 'vue';

const _hoisted_1 = /*#__PURE__*/createElementVNode(\\"h1\\", null, \\"Hello World\\", -1 /* HOISTED */);
const _hoisted_2 = [
  _hoisted_1
];


const _sfc_main = {
  setup(__props) {

return (_ctx, _cache) => {
  return (openBlock(), createElementBlock(\\"div\\", null, _hoisted_2))
}
}

};

export { _sfc_main as default };
"
`;

exports[`transform > fixtures > test/fixtures/script-setup.vue > isProduction is true 1`] = `
"import { openBlock, createElementBlock, createElementVNode } from 'vue';

const _hoisted_1 = /*#__PURE__*/createElementVNode(\\"h1\\", null, \\"Hello World\\", -1 /* HOISTED */);
const _hoisted_2 = [
  _hoisted_1
];


const _sfc_main = {
  setup(__props) {

return (_ctx, _cache) => {
  return (openBlock(), createElementBlock(\\"div\\", null, _hoisted_2))
}
}

};

export { _sfc_main as default };
"
`;

exports[`transform > fixtures > test/fixtures/script-setup-ts.vue > isProduction is false 1`] = `
"import { defineComponent, openBlock, createElementBlock, createElementVNode } from 'vue';

const _hoisted_1 = /* @__PURE__ */ createElementVNode(\\"h1\\", null, \\"Hello World\\", -1);
const _hoisted_2 = [
  _hoisted_1
];
const _sfc_main = /* @__PURE__ */ defineComponent({
  props: {
    foo: { default: \\"123\\" },
    bar: { default: 123 },
    baz: { type: Boolean, default: true }
  },
  setup(__props, { expose }) {
    const str = \\"bar\\";
    expose({
      str
    });
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\", null, _hoisted_2);
    };
  }
});

export { _sfc_main as default };
"
`;

exports[`transform > fixtures > test/fixtures/script-setup-ts.vue > isProduction is true 1`] = `
"import { defineComponent, openBlock, createElementBlock, createElementVNode } from 'vue';

const _hoisted_1 = /* @__PURE__ */ createElementVNode(\\"h1\\", null, \\"Hello World\\", -1);
const _hoisted_2 = [
  _hoisted_1
];
const _sfc_main = /* @__PURE__ */ defineComponent({
  props: {
    foo: { default: \\"123\\" },
    bar: { default: 123 },
    baz: { type: Boolean, default: true }
  },
  setup(__props, { expose }) {
    const str = \\"bar\\";
    expose({
      str
    });
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\", null, _hoisted_2);
    };
  }
});

export { _sfc_main as default };
"
`;

exports[`transform > fixtures > test/fixtures/sfc-src.vue > isProduction is false 1`] = `
"import { defineComponent, openBlock, createElementBlock, createElementVNode, toDisplayString } from 'vue';

var _sfc_main = defineComponent({
  setup() {
    return []
  }
});

const _hoisted_1 = /*#__PURE__*/createElementVNode(\\"h1\\", null, \\"Hello World\\", -1 /* HOISTED */);

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock(\\"div\\", null, [
    _hoisted_1,
    createElementVNode(\\"h2\\", null, toDisplayString(_ctx.msg), 1 /* TEXT */)
  ]))
}

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var sfcSrc = /*#__PURE__*/_export_sfc(_sfc_main, [['render',render]]);

export { sfcSrc as default };
"
`;

exports[`transform > fixtures > test/fixtures/sfc-src.vue > isProduction is true 1`] = `
"import { defineComponent, openBlock, createElementBlock, createElementVNode, toDisplayString } from 'vue';

var _sfc_main = defineComponent({
  setup() {
    return []
  }
});

const _hoisted_1 = /*#__PURE__*/createElementVNode(\\"h1\\", null, \\"Hello World\\", -1 /* HOISTED */);

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock(\\"div\\", null, [
    _hoisted_1,
    createElementVNode(\\"h2\\", null, toDisplayString(_ctx.msg), 1 /* TEXT */)
  ]))
}

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var sfcSrc = /*#__PURE__*/_export_sfc(_sfc_main, [['render',render]]);

export { sfcSrc as default };
"
`;

exports[`transform > fixtures > test/fixtures/src-script.ts > isProduction is false 1`] = `
"import { defineComponent } from 'vue';

var srcScript = defineComponent({
  setup() {
    return []
  }
});

export { srcScript as default };
"
`;

exports[`transform > fixtures > test/fixtures/src-script.ts > isProduction is true 1`] = `
"import { defineComponent } from 'vue';

var srcScript = defineComponent({
  setup() {
    return []
  }
});

export { srcScript as default };
"
`;

exports[`transform > fixtures > test/fixtures/typescript.vue > isProduction is false 1`] = `
"const _sfc_main = {};

export { _sfc_main as default };
"
`;

exports[`transform > fixtures > test/fixtures/typescript.vue > isProduction is true 1`] = `
"const _sfc_main = {};

export { _sfc_main as default };
"
`;
